--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
   # Build Job
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted #ubuntu-latest
 
     steps:
       - name: Checkout Code
@@ -31,7 +31,7 @@ jobs:
 
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
-        
+
         with:
           name: production-files
           path: ./dist
