--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ jobs:
   # Build Job
   build:
 
-    runs-on: self-hosted #ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
@@ -35,3 +35,32 @@ jobs:
         with:
           name: production-files
           path: ./dist
+      
+      # - name: Send Telegram notification
+      #   if: success()
+      #   run: |
+      #     curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" \
+      #     -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+      #     -d text="Build successful! 🎉"
+
+  
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v0.1.10
+
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          password: ${{ secrets.PASSWORD }}
+          script: |
+            cd /home/github-runner/salom
+            git stash
+            git pull
+            npm install
+            npm run build
+  
