--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,11 +5,10 @@ on:
   push:
     branches: ["main"]
 
-  workflow_dispatch:
 
 jobs:
   # Build Job
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -32,35 +31,26 @@ jobs:
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
 
-        with:
-          name: production-files
-          path: ./dist
-      
-      # - name: Send Telegram notification
-      #   if: success()
-      #   run: |
-      #     curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" \
-      #     -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-      #     -d text="Build successful! 🎉"
-
-  
+        # with:
+        #   name: production-files
+        #   path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
 
     steps:
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v0.1.10
-
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          password: ${{ secrets.PASSWORD }}
-          script: |
-            cd /home/github-runner/salom
-            git stash
-            git pull
-            npm install
-            npm run build
+    - name: Deploy to Staging server
+      uses: easingthemes/ssh-deploy@main
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        password: ${{ secrets.PASSWORD }}
+        EXCLUDE: "/dist/, /node_modules/"
+        script: |
+          cd /home/github-runner/salom
+          git stash
+          git pull
+          npm install
+          npm run build
   
