--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v3
 
-        # with:
-        #   name: production-files
-        #   path: ./dist
+        with:
+          name: production-files
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
