--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,6 +58,6 @@ jobs:
           cd /home/github-runner/salom
           git stash
           git pull
-          npm install
-          npm run build
+          # npm install
+          # npm run build
   
