--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,6 +53,7 @@ jobs:
         port: ${{ secrets.PORT }}
 
         script: |
-          git stash
+          
           chmod +x /home/salom/.scripts/deploy.sh
-          cd /home/salom && ./.scripts/deploy.sh
+          cd /home/salom && git stash && ./.scripts/deploy.sh
+          
