--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,7 +53,7 @@ jobs:
         port: ${{ secrets.PORT }}
 
         script: |
-          
+          cd /home/salom && git stash 
           chmod +x /home/salom/.scripts/deploy.sh
-          cd /home/salom && git stash && ./.scripts/deploy.sh
+          ./.scripts/deploy.sh
           
