--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,7 +53,12 @@ jobs:
         port: ${{ secrets.PORT }}
 
         script: |
-          cd /home/salom && git stash 
-          chmod +x /home/salom/.scripts/deploy.sh
-          ./.scripts/deploy.sh
+          git stash
+          git pull
+          /root/.nvm/versions/node/v22.3.0/bin/npm install --yes
+          /root/.nvm/versions/node/v22.3.0/bin/npm run build
+          
+          # cd /home/salom && git stash 
+          # chmod +x /home/salom/.scripts/deploy.sh
+          # ./.scripts/deploy.sh
           
