--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,12 +53,16 @@ jobs:
         port: ${{ secrets.PORT }}
 
         script: |
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+
           whoami
           cd /home/salom
           git stash
           git pull
-          /root/.nvm/versions/node/v22.3.0/bin/npm install --yes
-          /root/.nvm/versions/node/v22.3.0/bin/npm run build
+          npm install --yes
+          npm run build
 
           # cd /home/salom && git stash 
           # chmod +x /home/salom/.scripts/deploy.sh
