--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: hello-world
+name: Ci
 
 on: 
   
@@ -11,36 +11,30 @@ on:
 
 jobs:
   # Build Job
-  # test:
+  test:
 
-  #   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-  #     - name: Install Node
-  #       uses: actions/setup-node@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
 
-  #       with:
-  #         node-version: 18.x
+        with:
+          node-version: 18.x
 
-  #     - name: Install Dependencies
-  #       run: npm install
+      - name: Install Dependencies
+        run: npm install
 
-  #     - name: Build Project
-  #       run: npm run build
+      - name: Build Project
+        run: npm run build
 
-  #     - name: Upload artifact to enable deployment
-  #       uses: actions/upload-artifact@v3
-
-  #       with:
-  #         name: production-files
-  #         path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: test
+    needs: test
 
     steps:
 
