--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,3 +57,9 @@ jobs:
           git pull
           npm install --yes
           npm run build
+        
+    - name: Notify Telegram
+      run: |
+        curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
+        -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+        -d text="🚀 Deployment muvaffaqiyatli yakunlandi!"
