--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,23 +52,29 @@ jobs:
           [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
 
           whoami
-          cd /home/salom1
+          cd /home/salom
           git stash
           git pull
           npm install --yes
           npm run build
+    - name: send custom message with args
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: 👨🏻‍💻 User ${{github.actor}} in ${{ github.repository }} repository. Make ${{ github.event_name }}. Job ${{github.job}}.
         
-    - name: Notify Telegram on Success
-      if: success()
-      run: |
-        curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
-        -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-        -d text="🚀 Deployment muvaffaqiyatli yakunlandi!"
+    # - name: Notify Telegram on Success
+    #   if: success()
+    #   run: |
+    #     curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
+    #     -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+    #     -d text="🚀 Deployment muvaffaqiyatli yakunlandi!"
     
-    - name: Notify Telegram on Failure
-      if: failure()
-      run: |
-        echo "Error Details: ${{ steps.deploy.outputs.error }}"
-        curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
-        -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-        -d text="❌ Xatolik yuz berdi! Iltimos, jarayonni tekshiring.\n\nError Details: ${{ steps.deploy.outputs.error }}"
+    # - name: Notify Telegram on Failure
+    #   if: failure()
+    #   run: |
+    #     echo "Error Details: ${{ steps.deploy.outputs.error }}"
+    #     curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage \
+    #     -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+    #     -d text="❌ Xatolik yuz berdi! Iltimos, jarayonni tekshiring.\n\nError Details: ${{ steps.deploy.outputs.error }}"
