--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,7 +53,7 @@ jobs:
 
           whoami
           cd /home/salom
-          git stash
+          git stash1
           git pull
           npm install --yes
           npm run build
