--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -69,9 +69,9 @@ jobs:
           Job ${{github.job}}, 
           Status: ${{github.action_status}},
           action ${{github.action}}
-          # Commit message: ${{ github.event.commits[0].message }}
-          # Status: ${{ github.job_status }}
-          # Error Details: ${{ steps.deploy.outputs.error }}
+          # Commit message: ${{ (github.event.commits[0].message )}}
+          # Status: ${{ (github.job_status) }}
+          Error Details: ${{ (steps.deploy.outputs.error) }}
         
     # - name: Notify Telegram on Success
     #   if: success()
