--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,33 +10,13 @@ on:
 
 
 jobs:
-  # Build Job
-  # test:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
-
-      # - name: Install Node
-      #   uses: actions/setup-node@v3
-
-      #   with:
-      #     node-version: 18.x
-
-      # - name: Install Dependencies
-      #   run: npm install
-
-      # - name: Build Project
-      #   run: npm run build
-
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: test
 
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v0.1.10
