--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,13 +32,14 @@ jobs:
           [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
 
           whoami
-          cd /home/salom1
+          cd /home/salom
           git stash
           git pull
           npm install --yes
           npm run build
     - name: send custom message with args
       if: always()
+      
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
