--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,12 +18,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@v0.1.10
+    - name: Deploy to Server
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
-        password: ${{ secrets.SSHKEY }}
+        key: ${{ secrets.SSHKEY }}
         port: ${{ secrets.PORT }}
 
         script: |
