--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
           git pull
           npm install --yes
           npm run build
+          pm2 list
           
       
     - name: Notify Telegram
